--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation "com.google.android.gms:play-services-maps:$maps_services_version"
     implementation "com.google.android.gms:play-services-location:$location_services_version"
+    implementation "com.google.android.libraries.places:places:2.4.0"
 }
