--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
+
     }
     compileOptions {
         sourceCompatibility = 1.8
@@ -63,4 +65,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation 'com.google.android.material:material:1.2.1'
 }
